update nfl proj and fix article title size on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -573,4 +573,8 @@ MOBILE
     float: left;
     padding-top: 20px;
   }
+
+  .single-article-title {
+    font-size: 240%;
+  }
 }
